# canar

./: .env.example  .gitignore  README.fr.md  README.md  pyproject.toml  requirements.txt  test_postgres.py
app/: main.py  state.py
app/agents/: r_helpdesk.py  sas_to_r.py
app/ui/: chat.py  sidebar.py
canar/: README.md  launch.py
canar/app/: config.py  main.py  state.py
canar/app/api/: embed_client.py  llm_client.py  retrieval.py
canar/app/ui/: chat.py  sidebar.py
